# lem_in

./: .gitignore  CMakeLists.txt  correction test.pages  z_todo.c
create_map/: .gitignore  index.html
create_map/maker/: index.html  index.js
file/: CMakeLists.txt  Makefile  debug_print.c  get_option.c  input.c  main.c  main_2.c  print_debug_funtions.c
file/data/: best_path.c  finder_finder_link.c  free.c  lem.c  map.c  move.c  room.c  tunnel.c
file/debug/: debug_set.c
file/debug/src/: debug_map.c  debug_parseur.c  debug_path.c
file/includes/: all_includes.h  function.h  getter.h  main_struct.h  prog_option.h  struct.h  struct_algo.h  struct_min.h  struct_parser.h
file/parseur/: get_room.c  get_room_utils.c  get_tunnel.c  get_tunnel_1.c  get_tunnel_2.c  getter.c
file/solver/: move_f.c  move_f_main.c
file/solver/algo/: algo.c  find_best_path.c  set_up_tunnel_map.c  shorty_baby.c
file/solver/sort_path/: generate_map_path.c
file/solver/split_path/: clean_working_dll.c  split_path.c
libft/: Makefile  ft_library_header.h
libft/include/: dll_c_header.h  dll_header.h  libft_debug.h  sll_header.h  sll_l_header.h  tab.h
libft/src/argv/: ft_error.c
libft/src/error/: print_err_and_return.c
libft/src/error/err1/: err1_print_err.c
rendu/: Makefile  lem-in
rendu/test/: a.sh  lem-in  lem_mem
rendu/test/1__bad_ants/: f_limit_big  f_limit_neg
rendu/test/2__err_room/: bad_end_1  bad_end_2  bad_end_3  bad_start_2  double_coord  double_name  empty_line  name_with_L  name_with_tirret  no_end  space_1  space_2  start_is_end
rendu/test/3__link_no_work/: nopath
rendu/test/dur_test/: 4000-2000.txt
rendu/test/lem-in.dSYM/Contents/Resources/DWARF/: lem-in
rendu/test/test_violent/: 4000-12000  test_1  test_2
src/: Makefile  main.c  main_2.c
src/data/: finder_finder_link.c  move.c
src/debug/: debug_set.c
src/includes/: all_includes.h  function.h  struct.h  struct_algo.h
src/parseur/: getter.c
src/solver/: move_f_main.c
src/solver/algo/: algo.c
src/solver/split_path/: split_path.c
test/: a.sh  todo
test/1__bad_ants/: f_0  tuto.txt
test/2__err_room/: bad_start_1  bad_start_3  double_coord  name_with_0_1  name_with_L  name_with_tirret  no_end  no_start  space_3
test/dur_test/: test_2  test_2_test
